--- a/CSS/public.css
+++ b/CSS/public.css
@@ -10,7 +10,8 @@ body {
   position: relative;
   box-sizing: border-box;
   padding: 20px;
-  background: #fff; }
+  background: #fff;
+  overflow-y: auto; }
   .inputBox h5 {
     margin: 20px 0 10px 0px;
     color: #ccc; }
@@ -18,10 +19,9 @@ body {
       margin-top: 0; }
   .inputBox input, .inputBox select, .inputBox textarea, .inputBox label {
     box-sizing: border-box;
-    border: 1px #f5f5f5;
     padding: 10px 20px;
     height: 40px;
-    border: none;
+    border: 1px solid #f5f5f5;
     font-size: 1em;
     background: #f5f5f5;
     color: #333;
@@ -30,10 +30,18 @@ body {
       background-color: #fff;
       border: 1px solid #ccc;
       color: #333;
-      box-shadow: inset -1px -1px 10px #f5f5f5; }
+      box-shadow: inset -1px -1px 10px #f5f5f5;
+      transition: all 0.5s; }
+  .inputBox textarea {
+    margin-top: 10px; }
+    .inputBox textarea:first-child {
+      margin-top: 0; }
   .inputBox #Cword, .inputBox #Ctranslation {
     width: 100%; }
+  .inputBox #CwordId, .inputBox #phoneticSymbolID {
+    display: none; }
   .inputBox #Esymbol, .inputBox #Asymbol {
+    margin-top: 10px;
     width: 157px;
     box-sizing: border-box; }
   .inputBox #Esymbol {
@@ -41,12 +49,28 @@ body {
   .inputBox .line {
     position: relative;
     padding: 0  0 0 100px; }
-    .inputBox .line select {
+    .inputBox .line .select {
       position: absolute;
       padding: 10px;
       top: 0;
       left: 0;
       width: 80px; }
+    .inputBox .line ul {
+      display: none;
+      position: absolute;
+      top: 40px;
+      left: 0;
+      margin: 0;
+      background: #fff;
+      width: 80px;
+      padding: 0;
+      box-shadow: 5px 5px 40px #ddd; }
+      .inputBox .line ul li {
+        list-style-type: none;
+        padding: 10px; }
+        .inputBox .line ul li:hover {
+          background: #f5f5f5;
+          transition: all 0.2s; }
   .inputBox .level {
     display: none; }
     .inputBox .level:checked + label {
@@ -66,20 +90,176 @@ body {
     font-family: "Microsoft Yahei";
     line-height: 1.5em; }
     .inputBox textarea:hover, .inputBox textarea:focus {
-      color: #333; }
+      color: #333;
+      transition: all 0.5s; }
   .inputBox button {
     border: 1px solid #999;
     background: #fff;
-    position: absolute;
-    bottom: 20px;
     width: 157px;
     height: 40px;
     border-radius: 20px;
     text-align: center; }
   .inputBox .submit {
-    right: 20px;
+    border: none;
     background: #6ab3cb;
     color: #fff; }
   .inputBox .cancle {
-    left: 20px;
     color: #999; }
+
+header img {
+  height: 50px; }
+header a, header button, header h5 {
+  margin: 0;
+  display: inline-block;
+  padding: 20px 20px 10px 20px;
+  border-bottom: 2px;
+  color: #ccc;
+  font-size: 16px; }
+header a {
+  text-decoration: none; }
+  header a:first-child {
+    padding: 0;
+    float: left;
+    border: none; }
+header h5 {
+  color: #6ab3cb;
+  text-decoration: underline; }
+header .selected {
+  color: #6ab3cb;
+  border-bottom: solid #6ab3cb; }
+
+.main {
+  max-width: 1600px;
+  height: 720px;
+  box-sizing: border-box;
+  padding: 0 160px;
+  margin: 40px auto  0 auto;
+  position: relative;
+  background-position: center -120px;
+  background-repeat: no-repeat;
+  background-image: url("../images/background.png");
+  background-size: 1600px; }
+  .main .woman1, .main .woman2, .main .man1, .main .man2 {
+    position: absolute; }
+  .main .woman1 {
+    top: 630px;
+    left: 20px; }
+  .main .woman2 {
+    top: 380px;
+    left: 730px; }
+  .main .man1 {
+    top: 200px;
+    left: 1300px; }
+  .main .man2 {
+    top: 630px;
+    left: 730px; }
+
+.rail {
+  margin-top: -300px;
+  position: relative;
+  width: 99.9%;
+  height: 400px;
+  background-image: url("../images/rail.png");
+  background-repeat: repeat-x;
+  overflow: hidden; }
+  .rail .train {
+    position: absolute;
+    z-index: 1;
+    width: 500px;
+    height: 400px;
+    left: 25%;
+    bottom: 0;
+    animation: move 40s infinite;
+    background-image: url("../images/train.gif"); }
+
+@keyframes move {
+  0% {
+    left: -300px; }
+  100% {
+    left: 100%; } }
+.message {
+  width: 100%;
+  min-height: 120px;
+  box-sizing: border-box;
+  padding: 50px 20px 20px 100px;
+  position: relative; }
+  .message img {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 80px; }
+  .message div {
+    width: 300px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 2px solid #cccccc;
+    display: inline-block;
+    color: #333; }
+  .message button {
+    display: none;
+    float: right;
+    background: none;
+    border: none;
+    font-size: 1em;
+    color: #6ab3cb; }
+  .message p {
+    margin: 0; }
+
+.messageBox {
+  display: none;
+  z-index: 9;
+  position: fixed;
+  width: 450px;
+  margin-left: -225px;
+  left: 50%;
+  top: 20px;
+  background: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 5px 5px 40px #ddd; }
+
+.confirmBox {
+  display: none;
+  z-index: 10;
+  position: fixed;
+  width: 380px;
+  height: 300px;
+  top: 200px;
+  left: 50%;
+  margin-left: -225px;
+  box-sizing: border-box;
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 5px 5px 40px #ddd; }
+  .confirmBox img {
+    margin: 0px auto;
+    display: block;
+    width: 100px; }
+  .confirmBox p {
+    margin: 20px 0 20px 0;
+    text-align: center;
+    min-height: 80px;
+    font-size: 1.5em;
+    color: #333; }
+  .confirmBox button {
+    border: none;
+    width: 157px;
+    height: 40px;
+    border-radius: 20px;
+    text-align: center;
+    background: #f5f5f5; }
+    .confirmBox button:last-child {
+      margin-left: 20px;
+      background: #6ab3cb;
+      color: #fff; }
+
+.background {
+  display: none;
+  z-index: 2;
+  position: fixed;
+  opacity: 0.1;
+  background: #000;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0; }
